[package]
authors = ["Fraser Hutchison <fraser.hutchison@maidsafe.net>"]
description = "A library which returns the full path to the Git binary if it can be found."
documentation = "http://fraser999.github.io/Find-Git"
license = "MIT/Apache-2.0"
name = "find_git"
readme = "README.md"
repository = "https://github.com/Fraser999/Find-Git"
version = "1.0.2"

[lib]
name = "find_git"
path = "src/lib.rs"

[[bin]]
name = "find_git"
path = "src/bin.rs"
doc = false

[dependencies]
clippy = {version = "0.0", optional = true}

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
winreg = "0.3"
